--- a/Módulo5_Angular/ProjetoFinalAngular_LuizSa/FRONT/kanban/src/app/container/container.component.html
+++ b/Módulo5_Angular/ProjetoFinalAngular_LuizSa/FRONT/kanban/src/app/container/container.component.html
@@ -1,8 +1,61 @@
-<h3 class="font-weight-light text-dark">Kanban Board</h3>
-        <div class="small  text-dark">Drag and drop between swim lanes</div>
+<body>
+    <div class="container-fluid">
+        <h3 class="font-weight-light text-dark">Kanban Board</h3>
+        <div class="small  text-dark">You can use the buttons to create card and change it between columns</div>
         <div class="row flex-row flex-sm-nowrap py-3">
-            <div class="col-sm-6 col-md-4 col-xl-3">
-               
+            <div class="col-sm-3 col-md-2 col-xl-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="col-xl-8 flex-sm-nowrap flex-row row">
+                            <h6 class="card-title text-uppercase text-truncate">To Do</h6>
+                            <button class="btn btn-success btn-sm ml-4 mb-3">Create Card</button>
+                        </div>
+                        <div class="items border border-light">
+                            <div class="card draggable shadow-sm" id="cd1" draggable="true" ondragstart="drag(event)">
+                                <div class="card-body p-2">
+                                    <div class="card-title">
+                                        <a href="" class="lead font-weight-light">Título</a>
+                                    </div>
+                                    <p> This is a description of a item on the board. </p>
+                                    <button class="btn btn-primary btn-sm">View</button>
+                                    <button class="btn btn-danger btn-sm ml-3">Delete</button>
+                                    <button class="btn btn-secondary btn-sm ml-3">Move right</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-xl-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <div class="col-xl-8 flex-sm-nowrap flex-row row">
+                            <h6 class="card-title text-uppercase text-truncate">Doing</h6>
+                        </div>
+                        <div class="items border border-light">
+                            <div class="card draggable shadow-sm" id="cd1" draggable="true" ondragstart="drag(event)">
+                                <div class="card-body p-2">
+                                    <div class="card-title">
+                                        <a href="" class="lead font-weight-light">Título</a>
+                                    </div>
+                                    <p> This is a task that is being worked on. </p>
+                                    <button class="btn btn-secondary btn-sm mr-3">Move left</button>
+                                    <button class="btn btn-primary btn-sm">View</button>
+                                    <button class="btn btn-danger btn-sm ml-3">Delete</button>
+                                    <button class="btn btn-secondary btn-sm ml-3">Move right</button>
+                                </div>
+                            </div>                           
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6 col-md-4 col-xl-4">
+                <div class="card bg-light">
+                    <div class="card-body">
+                        <h6 class="card-title text-uppercase text-truncate py-2">Done</h6>
+                        <app-cards [cards]="cards"></app-cards>
+                    </div>
+                </div>
             </div>
         </div>
-        
+    </div>
